tests/snapshot/error/stack_trace/top_level_await_module.js
async function foo() {
  throw new Error('test');
}

await foo();